tests/baselines/reference/for-inStatementsDestructuring.errors.txt
for-inStatementsDestructuring.ts(1,10): error TS2461: Type 'string' is not an array type.
for-inStatementsDestructuring.ts(1,10): error TS2491: The left-hand side of a 'for...in' statement cannot be a destructuring pattern.


==== for-inStatementsDestructuring.ts (2 errors) ====
    for (var [a, b] in []) {}
             ~~~~~~
!!! error TS2461: Type 'string' is not an array type.
             ~~~~~~
!!! error TS2491: The left-hand side of a 'for...in' statement cannot be a destructuring pattern.